--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -133,56 +133,8 @@
 
             </div>
             <div class="container" ng-if="tabsIndex == 1" style="margin-top: 32px;">
-              <div class="order_card">
-                  <div class="row">
-                      <div class="col-md-8 order_cart">
-                          <div class="order_title">
-                              <div class="row">
-                                  <div class="col">
-                                      <h4><b>Shopping Cart</b></h4>
-                                  </div>
-                                  <div class="col align-self-center text-right text-muted">3 items</div>
-                              </div>
-                          </div>
-                          <div class="row border-top border-bottom">
-                              <div class="row main align-items-center">
-                                  <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/1GrakTl.jpg"></div>
-                                  <div class="col">
-                                      <div class="row text-muted">Shirt</div>
-                                      <div class="row">Cotton T-shirt</div>
-                                  </div>
-                                  <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a> </div>
-                                  <div class="col">&euro; 44.00 <span class="close">&#10005;</span></div>
-                              </div>
-                          </div>
 
-                          <div class="back-to-shop"><a href="#">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
-                      </div>
-                      <div class="col-md-4 order_summary">
-                          <div>
-                              <h5><b>Summary</b></h5>
-                          </div>
-                          <hr>
-                          <div class="row">
-                              <div class="col" style="padding-left:0;">ITEMS 3</div>
-                              <div class="col text-right">&euro; 132.00</div>
-                          </div>
-                          <form>
-                              <p>SHIPPING</p> <select>
-                                  <option class="text-muted">Standard-Delivery- &euro;5.00</option>
-                              </select>
-                              <p>GIVE CODE</p> <input id="code" placeholder="Enter your code">
-                          </form>
-                          <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
-                              <div class="col">TOTAL PRICE</div>
-                              <div class="col text-right">&euro; 137.00</div>
-                          </div> <button class="order_btn">CHECKOUT</button>
-                      </div>
-                  </div>
-              </div>
-
-
-              <div class="form-group" ng-if=" 2 == 1" >
+              <div class="form-group" >
                 <table class="table">
                     <thead>
                         <tr>
@@ -215,24 +167,7 @@
                     </table>
 
               </div>
-              <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-12" ng-show="productIndex != -1 ||pedido.pedido.length > 0">
-                <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-                  <label>Total (no incluye iva)</label>
-                  <h4>{{formato(2,totales.bolivares)}}</h4>
-                </div>
-                <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-                  <label>Total (con iva)</label>
-                  <h4>{{formato(2,totales.bolivares + totales.bsIVA)}}</h4>
-                </div>
-                <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-                  <label>Total USD (no incluye iva)</label>
-                  <h4>{{formato(3,totales.USD)}}</h4>
-                </div>
-                <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-                  <label>Total USD (con iva)</label>
-                  <h4>{{formato(3,totales.USDIVA)}}</h4>
-                </div>
-              </div> -->
+
               <div class="row">
                 <div class="col-lg-2 col-sm-5">
                   </div>
@@ -268,11 +203,7 @@
                         </table>
                     </div>
                 </div>
-              <!--
-              <div class="col-4 mb-5">
-                <label></label>
-                <button type="button"  class="btn btn-info" style="margin-top: 32px;" ng-click="addPedido();">Enviar pedido</button>
-              </div> -->
+
 
             </div>
 
