--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -401,7 +401,7 @@
                       </tbody>
                       </table>
             </div>
-            <div class="row">
+            <div class="row" ng-if="1==2" >
               <div class="col-lg-2 col-sm-5">
                 </div>
                   <div class="col-lg-6 col-sm-6 ml-auto">
@@ -447,49 +447,49 @@
                                     <td class="left">
                                         <strong class="text-dark">Total bruto</strong>
                                     </td>
-                                    <td class="right">{{formato(2,totalesDdo.total_bruto)}} {{totalesDdo.total_bruto}}</td>
+                                    <td class="right">{{formato(2,totalesDdo.total_bruto)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Desc. Volumen</strong>
                                     </td>
-                                    <td class="right">{{formato(2,totalesDdo.desc_volumen)}} {{totalesDdo.desc_volumen}}</td>
+                                    <td class="right">{{formato(2,totalesDdo.desc_volumen)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Otros descuentos</strong>
                                     </td>
-                                    <td class="right">{{formato(2,totalesDdo.otros_descuentos)}} {{totalesDdo.otros_descuentos}}</td>
+                                    <td class="right">{{formato(2,totalesDdo.otros_descuentos)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Desc. Adicional</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.desc_adicional)}} {{totalesDdo.desc_adicional}}</td>
+                                        <td class="right">{{formato(2,totalesDdo.desc_adicional)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Desc. dpp</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.desc_dpp)}} {{totalesDdo.desc_dpp}}</td>
+                                        <td class="right">{{formato(2,totalesDdo.desc_dpp)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Sub - Total</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.sub_total)}} {{totalesDdo.sub_total}}</td>
+                                        <td class="right">{{formato(2,totalesDdo.sub_total)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Impuesto</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.impuesto)}} {{totalesDdo.impuesto }}</td>
+                                        <td class="right">{{formato(2,totalesDdo.impuesto)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Total</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.total)}} {{totalesDdo.total }}</td>
+                                        <td class="right">{{formato(2,totalesDdo.total)}} </td>
                                 </tr>
                             </tbody>
                         </table>
