--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -98,6 +98,19 @@
 
             <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 1" >
 
+              <div class="row mt-3 mb-5" >
+                <div class="col-6">
+                  <label></label>
+                  <button type="button" class="btn btn-info" ng-click="addPedidoV2()" ng-show="ID == null"  >Abrir Pedido</button>
+                  <button type="button" class="btn btn-success"  ng-show="ID != null &&  counter < 600000" ng-click="openModalProducts()" >Agregar Productos</button>
+                </div>
+
+                <div class="col-6">
+                  <label></label>
+                  <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>
+                </div>
+              </div>
+
 
               <div class="row mt-3 mb-5" >
 
@@ -126,18 +139,6 @@
 
                 </div>
 
-
-
-                <div class="col-6">
-                  <label></label>
-                  <button type="button" class="btn btn-info" ng-click="addPedidoV2()" ng-show="ID == null"  >Abrir Pedido</button>
-                  <button type="button" class="btn btn-success"  ng-show="ID != null &&  counter < 600000" ng-click="openModalProducts()" >Agregar Productos</button>
-                </div>
-
-                <div class="col-6">
-                  <label></label>
-                  <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>
-                </div>
               </div>
 
 
@@ -220,7 +221,7 @@
                         </table>
                     </div>
                 </div>
-                
+
                 <div class="row">
                   <div class="col-lg-2 col-sm-5">
                     </div>
@@ -392,6 +393,19 @@
 
           <div class="col-sm-12 col-md-12 col-lg-12"  style="margin-top: 32px;" ng-show="tabsIndex == 1"  >
 
+            <div class="row mt-5 mb-5" ng-show="editView" >
+              <div class="col-6">
+                <label></label>
+                <button type="button" ng-show="editView" class="btn btn-info" ng-click="openModalProducts()">Agregar Productos</button>
+              </div>
+
+              <div class="col-6">
+                <label></label>
+                <button type="button"  class="btn btn-success" ng-show="editView && pedido.estatus_id < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
+              </div>
+
+              </div>
+
               <div class="row mt-5 mb-5" ng-show="editView" >
 
                 <div class="col-3">
@@ -417,17 +431,6 @@
                   <span >{{formato(3,(creditoClient.disp_usd_format)? (creditoClient.disp_usd_format - totales.UsdConIva):0)}}</span>
 
                 </div>
-
-                <div class="col-6">
-                  <label></label>
-                  <button type="button" ng-show="editView" class="btn btn-info" ng-click="openModalProducts()">Agregar Productos</button>
-                </div>
-
-                <div class="col-6">
-                  <label></label>
-                  <button type="button"  class="btn btn-success" ng-show="editView && pedido.estatus_id < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
-                </div>
-
 
 
               </div>
