--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -18,7 +18,7 @@
           <thead>
             <tr>
                 <th scope="col"><p class="text-center">Tipo documento</p></th>
-                <th scope="col"><p class="text-center">Documento</p></th>
+                <!-- <th scope="col"><p class="text-center">Documento</p></th> -->
                 <th scope="col"><p class="text-center">N° aviso</p></th>
                 <!-- <th scope="col"><p class="text-center">Serie</p></th> -->
                 <th scope="col"><p class="text-center">Fecha documento</p></th>
@@ -41,7 +41,7 @@
 
               <tr  ng-repeat="x in listFact"   >
                 <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
-                <td><p class="text-center">{{ x.docu_aviso }}</p></td>
+                <!-- <td><p class="text-center">{{ x.docu_aviso }}</p></td> -->
                 <td><p class="text-center">{{ x.no_fisico }}</p></td>
                 <!-- <td><p class="text-center">{{ x.serie_fisico }}</p></td> -->
                 <td><p class="text-center">{{ x.fecha_documento }}</p></td>
@@ -303,7 +303,7 @@
 
                           <th scope="col"><p class="text-center">Fecha </p></th>
                           <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
-                          <th scope="col"><p class="text-center">Aviso No.</p></th>
+                          <th scope="col"><p class="text-center">Documento</p></th>
                           <th scope="col"><p class="text-center">Saldo</p></th>
                           <!-- <th scope="col"><p class="text-center">N° de documento</p></th>
                             <th scope="col"><p class="text-center">Tipo venta</p></th>
